tests/valid/assign/basic_assign.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    (x = 42);
    x
}
