tests/invalid/linear_affine_error/linear_assign.facet
fn f(mut x: linear isize) -> linear isize {
    (x = 42);
    x
}
